WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
186454
REGRESSION(macOS Mojave): move-by-word-visually-multi-line.html fails
https://bugs.webkit.org/show_bug.cgi?id=186454
Summary
REGRESSION(macOS Mojave): move-by-word-visually-multi-line.html fails
Ryosuke Niwa
Reported
2018-06-08 22:12:56 PDT
The layout test fails on macOS Mojave due to a change in ICU.
Attachments
WIP
(5.14 KB, patch)
2018-06-08 22:13 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
WIP2
(10.65 KB, patch)
2018-06-08 23:06 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Fixes the bug
(17.33 KB, patch)
2018-06-08 23:32 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Fixes the bug
(17.33 KB, patch)
2018-06-08 23:33 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2018-06-08 22:13:46 PDT
Created
attachment 342359
[details]
WIP
Ryosuke Niwa
Comment 2
2018-06-08 23:06:04 PDT
Created
attachment 342361
[details]
WIP2
Ryosuke Niwa
Comment 3
2018-06-08 23:32:25 PDT
Created
attachment 342362
[details]
Fixes the bug
Ryosuke Niwa
Comment 4
2018-06-08 23:33:06 PDT
Created
attachment 342363
[details]
Fixes the bug
Ryosuke Niwa
Comment 5
2018-06-08 23:33:43 PDT
<
rdar://problem/38924796
>
WebKit Commit Bot
Comment 6
2018-06-09 13:15:34 PDT
Comment on
attachment 342363
[details]
Fixes the bug Clearing flags on attachment: 342363 Committed
r232662
: <
https://trac.webkit.org/changeset/232662
>
WebKit Commit Bot
Comment 7
2018-06-09 13:15:36 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug